# CloudComputing

./: .gitignore  README.md
task1/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
task1/api/: database.py  main.py
task1/api/api/: database.py  schemas.py
task1/api/api/models/: books.py
task1/api/api/routers/: books.py
task2/: README.md  docker-compose.yml
task2/api/: Dockerfile
task2/api/api/: dependencies.py
task2/configs/: api-deployment.yaml  api-service.yaml  mysql-data-persistentvolumeclaim.yaml  mysql-deployment.yaml  mysql-service.yaml
