[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["koralexa <koralexa@ispras.ru>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = {extras = ["all"], version = "0.98.0"}
sqlalchemy = "2.0.17"
pydantic = "1.10.11"
fastapi-filter = "0.6.0"
psycopg2-binary = "^2.9.6"
pymysql = "^1.1.0"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.278"
black = "23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",  # pep8-naming,
    "COM",# flake8-commas,
    "Q",  # flake8-quotes,
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "W", "I", "COM", "Q"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".venv",
    ".instances",
    "openapi"
]

line-length = 120

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10